--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Playfair+Display:wght@600&display=swap');
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     font-family: 'Inter', sans-serif;
 }
@@ -7,27 +11,38 @@ body {
 h1, h2 {
     font-family: 'Playfair Display', serif;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: ;
-}
 
 .container{
     max-width: 1400px;
     margin: auto;
     padding: 0 4%;
 }
-
-body{
-    background: linear-gradient(#3548d8 , #351010);
-    overflow-y: hidden;
-}
-
 nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-top: 25px;
+}
+.logo{
+    width: 170px;
+}
+.logo img{
+    width: 100%;
+}
+
+nav ul{
+    list-style: none;
+    display: flex;
+}
+
+nav ul li{
+    padding: 0 15px;
+    font-size: 15px;
+}
+nav ul li a{
+    color: black;
+    text-decoration: none;
+}
+header{
+    
 }
