--- a/style.css
+++ b/style.css
@@ -178,6 +178,12 @@ footer {
     padding-top: 20px;
 }
 
+aside video {
+    margin: 30px auto;
+  max-width: 560px;
+  width: 100%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
 
 /* Responsividade */
 @media (max-width: 900px) {
